@@ -7670,7 +7670,7 @@ hindusthani = {
 		}
 	}
 	panjabi = {
-		primary = PUN
+		primary = PTA
 		dynasty_names = {
 			"Kohkkar" "Gakhkhar" "Phulkian" "Bhullara" "Dhaliwala" "Sandhawalia" "Ahluwalia" "Langa" 
 			"Mirrani" "Abbasi"
