@@ -103,7 +103,7 @@ religious_center = {
 		}
 		else_if = {
 			limit = {
-				province_id = 2075 # Doaba
+				province_id = 4457 # khambat
 			}
 			religion = sikhism
 		}
