@@ -1,9 +1,9 @@
 government = monarchy
 add_government_reform = feudalism_reform
 technology_group = indian
-primary_culture = panjabi
+primary_culture = gujarati
 religion = sikhism
-capital = 510 #Sirhind
+capital = 4457 #Khambat
 
 #Lodis
 1431.1.1 = {
