@@ -2,7 +2,7 @@
 
 owner = LEB
 controller = LEB
-culture = phoenician
+culture = aramaic
 religion = monothelite
 capital = "Sidon"
 trade_goods = naval_supplies
