@@ -18,7 +18,6 @@ discovered_by = nomad_group
 discovered_by = muslim
 discovered_by = ottoman
 discovered_by = chinese
-add_province_triggered_modifier = sikh_amritsar
 
 1451.4.20 = {
 	controller = DLH
