@@ -16,6 +16,8 @@ add_core = GUJ
 add_core = OMA
 add_jains_or_burghers_effect = yes
 
+add_province_triggered_modifier = sikh_amritsar
+add_province_triggered_modifier = religious_center
 
 
 discovered_by = east_african
