@@ -28,7 +28,7 @@
  faltering_diplomacy:0 "Faltering Diplomacy"
  the_faithful_liberated_tadmun:0 "Tadmunism Resurgent"
  zoroastrian_yazd:0 "Pir-e-Naraki"
- zoroastrian_yazd_desc:0 "The Pir-e-Naraki sanctuary is one of the oldest Zoroastrian pilgrimage sites in the world. The fire that burns here inspires our people."
+ desc_zoroastrian_yazd:0 "The Pir-e-Naraki sanctuary is one of the oldest Zoroastrian pilgrimage sites in the world. The fire that burns here inspires our people."
  per_called_upon_zhayedan:0 "Called upon Zhayedan"
  per_zhayedan_drill_effect:0 "Zhayedan Drill"
  per_zhayedan_staff_effect:0 "Zhayedan Staff"
