@@ -474,3 +474,21 @@
  #Fucking Paradox needs to stop existing; here's Sumatra
  porch_of_mecca:1 "The Nestorian Route"
  porch_of_mecca_desc:1 "Nestorianism's spread into the Spice Islands and further have come to be through Sumatra, whose strategic position has served as its funnel."
+
+ PUN_ideas:1 "Sikh Ideas"
+ PUN_ideas_start:1 "Sikh Traditions"
+ PUN_ideas_bonus:1 "Sikh Ambition"
+ breadbasket_of_india:1 "The Bay of Khambat"
+ breadbasket_of_india_desc:1 "The Bay of Khambat is an important port on the northern Indian ocean trade route. From the horn of Africa to the bay of Bengal traders have bought and sold goods in our port cities of Bharuch, Khambat and, Surat. This trade from outside our realm and from within has resulted in many cities to grow and encourages all sorts of specialized production. We must do our utmost to encourage the growth of trade and to defend our ports from the bandits and brigands of the adjoining areas."
+ encourage_indo_persian_trade:1 "Encourage Indo-Persian Trade"
+ encourage_indo_persian_trade_desc:1 "Situated at India's south-westernmost border the region of Gujarat has always been at the crossroads of economic and cultural exchange between India and Persia. These ancient sea lanes of the Indian Ocean, have connected the great ports of India to the Persian world. With the Bay of Khambat is the last major port before heading into the Persian Gulf. These waters are, however, plagued by pirate and raiders. We should encourage the traffic along this ancient and vibrant sea routes and do everything in our power to look after the wellbeing of these traders by constructing a strong navy and policing these waters."
+ punjabi_textile_industry:1 "Gujarati Textile Industry"
+ punjabi_textile_industry_desc:1 "The Textile Industry has proved to be an economic success amongst our adversaries to the north. This has led our governors to promote the production of textiles so that we may be able to out-compete and become a major center of its production. Cloth from our weavers shall be specially made for markets all over Asia and Europe and our weavers will become the most productive in India."
+ foundation_of_the_khalsa:1 "The Khalsa"
+ foundation_of_the_khalsa_desc:1 "Sikhism, is a religion native to the Gujarat region and is growing rapidly in our realm. Members of this faith come from all castes and backgrounds and will defend their state regardless of their former professions."
+ gurmukhi_script:1 "Adopt Standardized Gurmukhi Script"
+ gurmukhi_script_desc:1 "We should adopt a standardized script instead of the many different ones currently in use in our lands."
+ strength_of_the_misls:1 "Strength of the Misls"
+ strength_of_the_misls_desc:1 "The administrative system of the Misl states of Gujarat allows them to field impressive cavalry forces. In times of need, we may call upon these forces to fight a common enemy."
+ reforming_the_punjabi_army:1 "Reforming the Army of Sarkar-i"
+ reforming_the_punjabi_army_desc:1 "The ways of our forefathers were sound and have served us well over the years. In order for our armies to continue to triumph on the battlefields we must, however, aim to create a more professional force. By studying the way far away countries organize their armies and making adapting their methods when prudent we may create a more efficient Sikh army while still retaining the unique qualities of our current military system."
