@@ -6,5 +6,7 @@
  great_project_suez_canal:1 "Egyptian canal"
  suez_canal:1 "Egyptian canal"
  suez_canal_title:1 "Build Egyptian canal"
- sikhism_religion_desc:0 "Sikhism is the faith founded by Guru Nanak around the turn of the 16th century in the Gujarat region. A monotheistic religion, Sikhism was born in an area where Islam and Hinduism mixes but is in many ways unlike either.\nNo province or country start with Sikh religion in the game but it will likely appear some decades from the start." 
+ sikh_golden_temple:1 "The Golden Temple"
+ desc_sikh_amritsar:1 "We are in control of the Golden Temple of Khambat, held sacred by Sikhs all over the world."
+ sikhism_religion_desc:1 "Sikhism is the faith founded by Guru Nanak around the turn of the 16th century in the Gujarat region. A monotheistic religion, Sikhism was born in an area where Islam and Hinduism mixes but is in many ways unlike either.\nNo province or country start with Sikh religion in the game but it will likely appear some decades from the start." 
  mahayana_religion_desc:1 "Mahayana is the most widely practiced branch of Buddhism. Its adherents strive to achieve enlightenment and possibly even obtain Buddhahood.\nWith the failure of the Arab conquests, the Indian powers have been able to maintain relatively more centralized states. As a result, Mahayana Buddhism has continued to be practiced in Northern India and parts of Southeast Asia."
