@@ -4,7 +4,7 @@ Version 1.18.1 India Patch
 		+ Localisation fixed due to duplication error
 	+ Oman Mission Tree
 		+ Oman missions localisation fixed due to the mentions Swahili
-	+  Ghassanids get arab missions
+	+  Ghassanids now get arab missions
 	+ Updated country flags to better fit with lore
 		+ Karnata, Multan, Sindh, Lahore
 	+ Tamilakam
@@ -12,6 +12,7 @@ Version 1.18.1 India Patch
 	+ Punjab
 		+ Renamed to Sarkar-i to better fit with Sikh lore
 		+ Patiala renamed to Punjab
+		+ Golden Temple has now been moved to Khambat
 	+ Dacia now has a description for its formation
 Version 18.0 (yes, FoI is now of age), otherwise known as the "China Patch 2: Electric Boogaloo feat. India and SEA"
 	+ Overhaul of the China Superregion! ...again.
